@@ -10,15 +10,16 @@ namespace testarduino
 
   void SerialPrinter::printString(const char * iValue)
   {
-    std::printf("%s",  iValue);
+    std::printf("%s", iValue);
     testarduino::log(iValue);
   }
 
   void SerialPrinter::printlnString(const char * iValue)
   {
-    std::printf("%s\n",iValue);
     std::string tmp = iValue;
     tmp.append("\n");
+
+    std::printf("%s",tmp.c_str());
     testarduino::log(tmp.c_str());
   }
 
