@@ -1,6 +1,7 @@
 Changes for 2.2.0:
 
 * New feature: New version handling code for scripts: Replaced `version_info.*` files by `/version` which is generated when running cmake. It is now up to each platform to parse the file and extract the current version.
+* New feature: Implemented support for Serial.print(value, radix) with DEC, HEX, OCT and BIN values.
 * Using 'c++ best practices' file structure (/include /src /lib /test)
 * Fixed issue #22 - Replace downloaded googletest third party library by a git submodule.
 * Fixed issue #25 - Use RapidAssist as a git submodule.
